add nbdev to requirements

--- a/settings.ini
+++ b/settings.ini
@@ -31,12 +31,12 @@ author = Rafael O. Ribeiro
 author_email = rafaeloliveiraribeiro@gmail.com
 copyright = 2022 onwards, %(author)s
 description = An attempt to build a package for forensic face examination
-keywords = nbdev jupyter notebook python
+keywords = nbdev jupyter python face recognition
 language = English
 status = 3
 user = rafribeiro
 
 ### Optional ###
-requirements = fastcore pandas insightface>=0.5 onnxruntime-gpu>=1.10.0
+requirements = fastcore nbdev pandas insightface>=0.5 onnxruntime-gpu>=1.10.0
 # dev_requirements = 
 # console_scripts =
