--- a/settings.ini
+++ b/settings.ini
@@ -5,7 +5,7 @@
 ### Python library ###
 repo = forensicface
 lib_name = %(repo)s
-version = 0.0.4
+version = 0.0.5
 min_python = 3.7
 license = bsd3
 
@@ -37,6 +37,6 @@ status = 3
 user = rafribeiro
 
 ### Optional ###
-requirements = fastcore nbdev pandas insightface>=0.5 onnxruntime-gpu>=1.10.0
+requirements = fastcore nbdev pandas insightface onnxruntime-gpu>=1.10.0
 # dev_requirements = 
 # console_scripts =
