--- a/settings.ini
+++ b/settings.ini
@@ -5,7 +5,7 @@
 ### Python library ###
 repo = forensicface
 lib_name = %(repo)s
-version = 0.1.9
+version = 0.1.10
 min_python = 3.7
 license = bsd3
 
@@ -31,12 +31,12 @@ author = Rafael O. Ribeiro
 author_email = rafaeloliveiraribeiro@gmail.com
 copyright = 2022 onwards, %(author)s
 description = An attempt to build a package for forensic face examination
-keywords = nbdev jupyter python face recognition
+keywords = nbdev jupyter python face recognition forensics
 language = English
 status = 3
 user = rafribeiro
 
 ### Optional ###
-requirements = fastcore nbdev pandas insightface>0.5 onnxruntime-gpu>=1.10.0
+requirements = fastcore nbdev pandas insightface>0.5 onnxruntime-gpu>=1.10.0 imutils
 # dev_requirements = 
 # console_scripts =
