Remove support for magface; CR-FIQA not tied to sepaelv2; min Python version is now 3.8

--- a/_proc/nbdev.yml
+++ b/_proc/nbdev.yml
@@ -4,6 +4,6 @@ project:
 website:
   title: "forensicface"
   site-url: "https://rafribeiro.github.io/forensicface"
-  description: "An attempt to build a package for forensic face examination"
+  description: "A package for forensic face examination"
   repo-branch: main
   repo-url: "https://github.com/rafribeiro/forensicface"
