--- a/settings.ini
+++ b/settings.ini
@@ -5,8 +5,8 @@
 ### Python library ###
 repo = forensicface
 lib_name = %(repo)s
-version = 0.1.11
-min_python = 3.7
+version = 0.2.0
+min_python = 3.8
 license = bsd3
 
 ### nbdev ###
@@ -30,7 +30,7 @@ audience = Developers
 author = Rafael O. Ribeiro
 author_email = rafaeloliveiraribeiro@gmail.com
 copyright = 2022 onwards, %(author)s
-description = An attempt to build a package for forensic face examination
+description = A package for forensic face examination
 keywords = nbdev jupyter python face recognition forensics
 language = English
 status = 3
