--- a/nbs/nbdev.yml
+++ b/nbs/nbdev.yml
@@ -4,6 +4,6 @@ project:
 website:
   title: "forensicface"
   site-url: "https://rafribeiro.github.io/forensicface"
-  description: "An attempt to build a package for forensic face examination"
+  description: "A package for forensic face examination"
   repo-branch: main
   repo-url: "https://github.com/rafribeiro/forensicface"
