--- a/settings.ini
+++ b/settings.ini
@@ -5,7 +5,7 @@
 ### Python library ###
 repo = forensicface
 lib_name = %(repo)s
-version = 0.3.5
+version = 0.3.6
 min_python = 3.8
 license = bsd3
 
@@ -37,6 +37,6 @@ status = 4
 user = rafribeiro
 
 ### Optional ###
-requirements = fastcore nbdev pandas insightface>0.5 onnxruntime-gpu>=1.10.0 imutils
+requirements = fastcore nbdev pandas insightface>0.5 onnxruntime-gpu>=1.10.0 imutils setuptools
 # dev_requirements = 
 # console_scripts =
